{
    "name": "TerrariumInputs",
    "maps": [
        {
            "name": "Player",
            "id": "828dc39d-cd1c-41ae-859d-97917a02e89c",
            "actions": [
                {
                    "name": "Player_Look",
                    "type": "Value",
                    "id": "570b2447-e43b-4512-86bc-df9f003a469b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player_Pause",
                    "type": "Button",
                    "id": "15f17a7c-cc69-4d49-b6c1-4a3472c0301b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Settings",
                    "type": "Button",
                    "id": "90d4bd21-6131-43f9-b840-d0053724b92c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Deselect",
                    "type": "Button",
                    "id": "de95a48e-cca3-47e5-8cd0-e30ae2f5f8cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Zoom",
                    "type": "Value",
                    "id": "ea7c22c3-3963-43bb-9f8f-ad4ade8997c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player_Camera_Elevation",
                    "type": "Value",
                    "id": "808ef93f-176f-4695-9cf2-dd26156b6f7b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player_Camera_Home",
                    "type": "Button",
                    "id": "f645af20-b4d1-451b-b38b-71b4fe605c62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Delete_Tower",
                    "type": "Button",
                    "id": "732676f1-cc5c-4cde-a123-d45c288d39e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Turbo_Boost",
                    "type": "Button",
                    "id": "a0468bc3-f804-4c38-9eca-53789f0cf6f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Camera_Rotate",
                    "type": "Value",
                    "id": "43c5f99c-5c15-4188-917b-5721bdf5d3d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6205db0c-d6f2-432e-af6d-11ad351882ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8418f1b5-9ce5-42a3-93a1-99a5ae296caa",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "48c2f938-29c7-4fe1-b3ea-57c2a9c19580",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "9d732597-5598-4b46-9ae3-aa5d3677accd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "31040fe8-95e5-4f2b-b335-472cee8a5fcb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "a3ab8808-6f1c-4918-820e-e03487f43331",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "f1396980-ba88-4f7a-82d0-606eabc91e94",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "8b24deb5-5f74-44c8-ab43-b6d6a1fa9f16",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "0419fb02-5c1f-4c2b-94c1-4c359746af1a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "4e8c431e-9a8d-45d7-9a06-68516518c9df",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "55f74bc0-dcee-4da4-9fb2-293727a15481",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "3e663a09-59c1-4e1a-81a1-d6b8ba737230",
                    "path": "CustomMouse2DVector",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.4,y=0.4)",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "4563fcd9-c00f-45fc-afea-c1c1f1d396e7",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "968b0e0b-e22d-4066-a6c8-f2bf562b0e72",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "x",
                    "id": "3516348c-d6c4-454a-b407-28115be9daac",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "y",
                    "id": "ac28810f-0bbc-4b98-9d41-f57755d8870d",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0fa80bb4-5696-4b5c-a079-78053a0241d7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Deselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c94a7ad-d48e-49f2-8182-ae3d94ecbfa3",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cdc80214-539d-4452-a97b-c9f9ddb92818",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Elevation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "30338dac-10ee-4ff5-bed7-b8279f38acd7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Elevation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a9544496-49b1-4939-afbb-b01c27a0503d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Elevation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "797436f0-5b7e-4acd-a782-1fb12b235e3c",
                    "path": "<Keyboard>/home",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Home",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd0f3ff9-9048-4ffd-ba54-48ffccef5cb6",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Delete_Tower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "657ab898-8a06-4025-9223-e295169148c6",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Turbo_Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Custom 2D Vector With Modifier",
                    "id": "1c68a3ac-27fb-44ec-92ec-146e609e5bf6",
                    "path": "Custom2DVectorWithModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "b8e8f801-eaaf-477e-8acb-c2163ddefe89",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "X",
                    "id": "feb25e1a-caa8-4ce9-a4d1-e812f7cff1b3",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Y",
                    "id": "7e2b110d-287a-41fe-8941-323e34cebb34",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Camera_Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "SettingsScreen",
            "id": "9498d387-33a9-4e72-a830-d6f68ff08546",
            "actions": [
                {
                    "name": "SettingsScreen_Close",
                    "type": "Button",
                    "id": "657a44ce-5f3c-4046-8c95-1c9eca2269cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30cc4392-ba7d-4c45-8bf6-2a3bb002a8ea",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SettingsScreen_Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18f5ae9d-b4f8-4294-bc56-aec9dc7b5afa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SettingsScreen_Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MessageBox",
            "id": "868b74e1-8839-4e16-a148-64c05f49e179",
            "actions": [
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "451a86b0-cb4b-437a-bbc1-6ca25c4194a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Advance",
                    "type": "Button",
                    "id": "f752bcb2-5baf-4a70-a0f9-5ed0edb9ce31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e8dc225-d708-4b61-bdcc-743807b578e1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "220b9f57-e8ea-48cb-8192-17d87d399bd7",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Advance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6889a388-9f31-4a4d-9030-cd5d85bc9103",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Advance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}